--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,68 +1,114 @@
-@font-face {
-  font-family: "PT Sans";
-  src: url(./../Fonts/PTSans-Regular.ttf);
-}
-
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-size: 16px;
+  --main-blue-color: #4070f4;
 }
 
 body {
-  font-family: "PT Sans", Helvetica, sans-serif;
-  color: white;
-  line-height: 1.6;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-  font-size: 1rem;
-}
-
-h1 {
-  font-size: 4rem;
-  margin-bottom: 0.6em;
-}
-
-h2 {
-  font-size: 2rem;
-  margin-bottom: 1em;
-}
-
-.main-header {
-  background-color: #252529;
-  color: #eeeeee;
-  font-size: 0;
-}
-
-.nav-list-item {
-  display: inline-block;
-}
-
-.nav-link {
-  padding: 1em;
-  display: inline-block;
-}
-
-.first-section {
-  background-color: #252529;
-  background-image: url(./../Images/showcase.jpeg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  min-height: 100vh;
-  padding: 15em 0 1em;
+  font-family: sans-serif;
+  background-color: antiquewhite;
   text-align: center;
 }
 
-.center-wrapper {
-  max-width: 1276px;
+.user-card {
+  margin: 20px auto;
+  max-width: 350px;
   width: 100%;
-  min-width: 320px;
-  margin: 0 auto;
-  padding: 0 2em;
+  min-width: 250px;
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 0 0 5px gray;
+  overflow: hidden;
+}
+
+.blue-bg {
+  background-color: var(--main-blue-color);
+  height: 100px;
+}
+
+.user-photo-wrapper {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-top: -75px;
+  overflow: hidden;
+  border: 2px solid var(--main-blue-color);
+  display: inline-block;
+}
+
+.user-photo {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid white;
+}
+
+.content-container {
+  padding: 0 20px 15px;
+}
+
+h2,
+p,
+.links-container,
+.btn-container {
+  margin-bottom: 1em;
+}
+
+.social-link {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  padding: 7px;
+  border-radius: 50%;
+  color: white;
+}
+
+.fb-link {
+  background-color: #3f67b7;
+}
+
+.tw-link {
+  background-color: #1ba1f0;
+}
+
+.inst-link {
+  background-color: #e53170;
+}
+
+.youtube-link {
+  background-color: #fb0000;
+}
+
+.social-link + .social-link {
+  margin-left: 7px;
+}
+
+.subscribe-btn,
+.Message-btn {
+  background-color: #3a73f9;
+  border: 0px;
+  border-radius: 15px;
+  padding: 10px 20px;
+  color: white;
+}
+
+.Message-btn {
+  margin-left: 20px;
+}
+
+.social-count-list {
+  font-size: 0;
+}
+
+.social-counts {
+  display: inline-block;
+  padding: 0 10px;
+  font-size: 16px;
+}
+
+.social-counts + .social-counts {
+  border-left: 1px solid grey;
 }
