--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,113 +2,25 @@
   box-sizing: border-box;
 }
 
-html {
-  --main-blue-color: #4070f4;
+.container {
+  border: 2px solid blue;
+  padding: 5px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
-body {
-  font-family: sans-serif;
-  background-color: antiquewhite;
-  text-align: center;
+.child {
+  border: 2px solid green;
+  padding: 5px;
 }
 
-.user-card {
-  margin: 20px auto;
-  max-width: 350px;
-  width: 100%;
-  min-width: 250px;
-  background-color: white;
-  border-radius: 20px;
-  box-shadow: 0 0 5px gray;
-  overflow: hidden;
+.child1 {
+  align-self: flex-end;
 }
 
-.blue-bg {
-  background-color: var(--main-blue-color);
-  height: 100px;
-}
-
-.user-photo-wrapper {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  margin-top: -75px;
-  overflow: hidden;
-  border: 2px solid var(--main-blue-color);
-  display: inline-block;
-}
-
-.user-photo {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  object-fit: cover;
-  border: 2px solid white;
-}
-
-.content-container {
-  padding: 0 20px 15px;
-}
-
-h2,
-p,
-.links-container,
-.btn-container {
-  margin-bottom: 1em;
-}
-
-.social-link {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  padding: 7px;
-  border-radius: 50%;
-  color: white;
-}
-
-.fb-link {
-  background-color: #3f67b7;
-}
-
-.tw-link {
-  background-color: #1ba1f0;
-}
-
-.inst-link {
-  background-color: #e53170;
-}
-
-.youtube-link {
-  background-color: #fb0000;
-}
-
-.social-link + .social-link {
-  margin-left: 7px;
-}
-
-.subscribe-btn,
-.Message-btn {
-  background-color: #3a73f9;
-  border: 0px;
-  border-radius: 15px;
-  padding: 10px 20px;
-  color: white;
-}
-
-.Message-btn {
-  margin-left: 20px;
-}
-
-.social-count-list {
-  font-size: 0;
-}
-
-.social-counts {
-  display: inline-block;
-  padding: 0 10px;
-  font-size: 16px;
-}
-
-.social-counts + .social-counts {
-  border-left: 1px solid grey;
+.child4 {
+  align-self: stretch;
 }
