--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,25 +2,56 @@
   box-sizing: border-box;
 }
 
-.container {
-  border: 2px solid blue;
-  padding: 5px;
-  height: 200px;
+body {
+  padding: 10px;
+}
+
+.user-card {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  max-width: 320px;
+  min-width: 280px;
+  width: 100%;
+  box-shadow: 0 0 10px purple;
+  padding: 15px;
+  border-radius: 5px;
   align-items: center;
+  text-align: center;
 }
 
-.child {
-  border: 2px solid green;
-  padding: 5px;
-}
-
-.child1 {
+.edit-btn {
   align-self: flex-end;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  color: purple;
 }
 
-.child4 {
+.user-img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.membership-section {
+  display: flex;
+  justify-content: space-between;
   align-self: stretch;
+}
+
+.social-link-list {
+  display: flex;
+  gap: 15px;
+}
+
+.social-lnk {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: inherit;
+  text-decoration: none;
+  width: 30px;
+  height: 30px;
+  border: 1px solid grey;
+  border-radius: 50%;
 }
