--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,55 +3,19 @@
 }
 
 body {
-  padding: 10px;
+  padding: 20px;
 }
 
-.user-card {
-  display: flex;
-  flex-direction: column;
-  max-width: 320px;
-  min-width: 280px;
-  width: 100%;
-  box-shadow: 0 0 10px purple;
-  padding: 15px;
-  border-radius: 5px;
-  align-items: center;
-  text-align: center;
-}
-
-.edit-btn {
-  align-self: flex-end;
+button {
+  background-color: aquamarine;
+  padding: 1em 2em;
   border: none;
-  background-color: transparent;
-  cursor: pointer;
-  color: purple;
+  border-radius: 10px;
+  transition: background-color 0.2s linear;
 }
 
-.user-img {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-.membership-section {
-  display: flex;
-  justify-content: space-between;
-  align-self: stretch;
-}
-
-.social-link-list {
-  display: flex;
-  gap: 15px;
-}
-
-.social-lnk {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: inherit;
-  text-decoration: none;
-  width: 30px;
-  height: 30px;
-  border: 1px solid grey;
-  border-radius: 50%;
+button:hover {
+  background-color: red;
+  box-shadow: 0 0 10px black;
+  transform: scale(1.1);
 }
