--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,23 @@
 * {
   box-sizing: border-box;
 }
-
-body {
+header {
+  color: white;
+  font-size: 30px;
   padding: 20px;
+  min-height: 100vh;
+  background-image: url(./../Images/BG1.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
 }
 
-button {
-  background-color: aquamarine;
-  padding: 1em 2em;
-  border: none;
-  border-radius: 10px;
-  transition: background-color 0.2s linear;
-}
-
-button:hover {
-  background-color: red;
-  box-shadow: 0 0 10px black;
-  transform: scale(1.1);
+.header-content {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: 5px solid red;
+  text-align: center;
 }
